Open important JDK modules for all with Java 16+. Remove MaxPermSize.